--- a/VSHORAD (unstable)/changelog.txt
+++ b/VSHORAD (unstable)/changelog.txt
@@ -3,6 +3,13 @@ Changelog specific to "unstable" version.
 All "unstable" versions have "a" tagged to it, "a" removed only after it is deployed in "EXPORT" version.
 */
 
+v1.3a [30 Mar 2022]
+ADDED:
+- Altitude limit for missile
+CHANGED:
+- Increased gimbal limit of camera/controls
+- Changed calculation of missile distance and speed, now calculates with constant acceleration instead of constant speed
+
 v1.2.1a [29 Mar 2022]
 ADDED:
 - FPS counter
