--- a/VSHORAD (unstable)/changelog.txt
+++ b/VSHORAD (unstable)/changelog.txt
@@ -3,6 +3,14 @@ Changelog specific to "unstable" version.
 All "unstable" versions have "a" tagged to it, "a" removed only after it is deployed in "EXPORT" version.
 */
 
+v2.0.0a[20 Jul 2022]
+ADDED:
+- Mobile-specific controls, CSS, skybox
+- Minified JS file for simulator
+- Option to auto shorten recorded and shown c130 flight path
+CHANGED:
+- Lowered intensity of lights
+
 v1.5.0a[18 Jul 2022]
 ADDED:
 - Squared sine wave for altitude change for c130, with corresponding params in GUI
