--- a/VSHORAD (unstable)/changelog.txt
+++ b/VSHORAD (unstable)/changelog.txt
@@ -3,6 +3,10 @@ Changelog specific to "unstable" version.
 All "unstable" versions have "a" tagged to it, "a" removed only after it is deployed in "EXPORT" version.
 */
 
+v2.0.2a [16 Jan 2020]
+CHANGED:
+- Slight optimisation by reducing number of new objects created
+
 v2.0.1a [22 Jul 2020]
 ADDED:
 - Different .glb files loaded for mobile vs PC
